[gd_scene load_steps=4 format=3 uid="uid://dfbpicrrm3o1n"]

[ext_resource type="PackedScene" uid="uid://ddg3xgxwwq7wh" path="res://nova_stuff/backgrounds/background.tscn" id="1_8sps5"]
[ext_resource type="Script" path="res://nova_stuff/game_screens/start_screen.gd" id="1_fx000"]
[ext_resource type="PackedScene" uid="uid://dn70c4asddseq" path="res://nova_stuff/game_screens/options_screen.tscn" id="3_ykmnh"]

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fx000")

[node name="Background" parent="." instance=ExtResource("1_8sps5")]

[node name="StartScreen" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -375.5
offset_top = -70.0
offset_right = 375.5
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Label" type="Label" parent="StartScreen"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0.498039, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.588235)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 20
theme_override_font_sizes/font_size = 100
text = "Cat Lain Bakery"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="StartScreen"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="HostButton" type="Button" parent="StartScreen/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Host Game"

[node name="JoinButton" type="Button" parent="StartScreen/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Join Game"

[node name="OptionsButton" type="Button" parent="StartScreen/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Options"

[node name="ExitButton" type="Button" parent="StartScreen/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Exit"

[node name="OptionsScreen" parent="." instance=ExtResource("3_ykmnh")]
visible = false
layout_mode = 1
start_options = true

[node name="JoinScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="JoinScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="VBoxContainer" type="VBoxContainer" parent="JoinScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -375.5
offset_top = -70.0
offset_right = 375.5
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Label" type="Label" parent="JoinScreen/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0.498039, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.588235)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 20
theme_override_font_sizes/font_size = 100
text = "Join Game
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="JoinScreen/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="GridContainer" type="GridContainer" parent="JoinScreen/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 20
columns = 2

[node name="MusicLabel" type="Label" parent="JoinScreen/VBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 30
text = "Address:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="AddressInput" type="LineEdit" parent="JoinScreen/VBoxContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
text = "127.0.0.1"

[node name="SFXLabel" type="Label" parent="JoinScreen/VBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 30
text = "Port:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="PortInput" type="SpinBox" parent="JoinScreen/VBoxContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
max_value = 65535.0
value = 8888.0

[node name="ConnectButton" type="Button" parent="JoinScreen/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Connect"

[node name="JoinBackButton" type="Button" parent="JoinScreen/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Back"

[node name="ExitButton" type="Button" parent="JoinScreen/VBoxContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Exit"

[connection signal="pressed" from="StartScreen/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="StartScreen/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="StartScreen/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="StartScreen/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="JoinScreen/VBoxContainer/VBoxContainer/ConnectButton" to="." method="_on_connect_button_pressed"]
[connection signal="pressed" from="JoinScreen/VBoxContainer/VBoxContainer/JoinBackButton" to="." method="_on_join_back_button_pressed"]
